Move user update methods out of /auth endpoint
