# src/routes/auth.ts
@@ -2,18 +2,13 @@ import * as bodyParser from 'koa-bodyparser'
 import * as Router from 'koa-router'
 import { config } from '~/config'
 import { emitRouterError } from '~/lib/errors'
-import { emailNotExists, jwtAuth, localAuth, logOut, optionalJwtAuth,
-  resetPassword, sendResetPassword, sendVerification, signUpUser, validEmail,
-  verifyEmail } from '~/middleware/auth'
-import { hasValidMembership } from '~/middleware/hasValidMembership'
+import { emailNotExists, jwtAuth, localAuth, logOut, optionalJwtAuth, resetPassword, sendResetPassword,
+  sendVerification, signUpUser, validEmail, verifyEmail } from '~/middleware/auth'
 import { parseQueryPageOptions } from '~/middleware/parseQueryPageOptions'
 import { validateAuthLogin, validateAuthResetPassword, validateAuthSendResetPassword,
   validateAuthSendVerification, validateAuthSignUp, validateAuthVerifyEmail
   } from '~/middleware/queryValidation/auth'
-import { validateUserAddOrUpdateHistoryItem, validateUserHistoryItemRemove, validateUserUpdate,
-  validateUserUpdateQueue } from '~/middleware/queryValidation/update'
-import { addOrUpdateHistoryItem, clearAllHistoryItems, deleteLoggedInUser, getCompleteUserDataAsJSON, getLoggedInUser,
-  getUserMediaRefs, getUserPlaylists, updateQueueItems, updateLoggedInUser, removeHistoryItem } from '~/controllers/user'
+import { getLoggedInUser, getUserMediaRefs, getUserPlaylists } from '~/controllers/user'
 const RateLimit = require('koa2-ratelimit').RateLimit
 const { rateLimiterMaxOverride } = config
 
@@ -166,140 +161,6 @@ router.post('/sign-up',
   validEmail,
   emailNotExists,
   signUpUser)
-
-// Delete
-router.delete('/user',
-  jwtAuth,
-  async ctx => {
-    try {
-      await deleteLoggedInUser(ctx.state.user.id, ctx.state.user.id)
-      ctx.status = 200
-    } catch (error) {
-      emitRouterError(error, ctx)
-    }
-  })
-
-// Update
-const updateUserLimiter = RateLimit.middleware({
-  interval: 1 * 60 * 1000,
-  max: rateLimiterMaxOverride || 5,
-  message: `You're doing that too much. Please try again in a minute.`,
-  prefixKey: 'patch/user'
-})
-
-router.patch('/user',
-  updateUserLimiter,
-  jwtAuth,
-  validateUserUpdate,
-  hasValidMembership,
-  async ctx => {
-    try {
-      const body = ctx.request.body
-      const user = await updateLoggedInUser(body, ctx.state.user.id)
-      ctx.body = user
-    } catch (error) {
-      emitRouterError(error, ctx)
-    }
-  })
-
-// Add or update history item
-router.patch('/user/add-or-update-history-item',
-  jwtAuth,
-  validateUserAddOrUpdateHistoryItem,
-  hasValidMembership,
-  async ctx => {
-    try {
-      const body: any = ctx.request.body
-      await addOrUpdateHistoryItem(body.historyItem, ctx.state.user.id)
-
-      ctx.status = 200
-      ctx.body = { message: 'Updated user history' }
-    } catch (error) {
-      emitRouterError(error, ctx)
-    }
-  })
-
-// Remove all history items
-router.delete('/user/history-item/clear-all',
-  jwtAuth,
-  validateUserHistoryItemRemove,
-  hasValidMembership,
-  async ctx => {
-    try {
-      await clearAllHistoryItems(ctx.state.user.id)
-      ctx.status = 200
-      ctx.body = { message: 'Cleared all history items.' }
-    } catch (error) {
-      emitRouterError(error, ctx)
-    }
-  })
-
-// Remove history item
-router.delete('/user/history-item',
-  jwtAuth,
-  async (ctx, next) => {
-    const { episodeId, mediaRefId } = ctx.query
-    ctx.state.query = {
-      ...(episodeId ? { episodeId } : {}),
-      ...(mediaRefId ? { mediaRefId } : {})
-    }
-    await next()
-  },
-  validateUserHistoryItemRemove,
-  hasValidMembership,
-  async ctx => {
-    try {
-      await removeHistoryItem(ctx.query.episodeId, ctx.query.mediaRefId, ctx.state.user.id)
-      ctx.status = 200
-      ctx.body = { message: 'Removed history item.' }
-    } catch (error) {
-      emitRouterError(error, ctx)
-    }
-  })
-
-// Download user data
-const downloadUserLimiter = RateLimit.middleware({
-  interval: 5 * 60 * 1000,
-  max: rateLimiterMaxOverride || 2,
-  message: `You're doing that too much. Please try again in 5 minutes.`,
-  prefixKey: 'get/user/download'
-})
-
-router.get('/user/download',
-  downloadUserLimiter,
-  jwtAuth,
-  async ctx => {
-    try {
-      const userJSON = await getCompleteUserDataAsJSON(ctx.state.user.id, ctx.state.user.id)
-      ctx.body = userJSON
-    } catch (error) {
-      emitRouterError(error, ctx)
-    }
-  })
-
-// Update queueItems
-const updateQueueUserLimiter = RateLimit.middleware({
-  interval: 1 * 60 * 1000,
-  max: rateLimiterMaxOverride || 30,
-  message: `You're doing that too much. Please try again in a minute.`,
-  prefixKey: 'patch/user/update-queue'
-})
-
-router.patch('/user/update-queue',
-  updateQueueUserLimiter,
-  jwtAuth,
-  validateUserUpdateQueue,
-  hasValidMembership,
-  async ctx => {
-    try {
-      const body: any = ctx.request.body
-      const user = await updateQueueItems(body.queueItems, ctx.state.user.id)
-
-      ctx.body = user.queueItems
-    } catch (error) {
-      emitRouterError(error, ctx)
-    }
-  })
 
 const verifyEmailLimiter = RateLimit.middleware({
   interval: 5 * 60 * 1000,
